--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,16 @@
   scroll-behavior : smooth;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -54,4 +64,11 @@ code {
   to {
     transform: rotate(360deg);
   }
+}
+
+.greenColor {
+  color: green !important;
+}
+.redColor {
+  color: red !important;
 }
