--- a/frontend/src/component/Product/Product.css
+++ b/frontend/src/component/Product/Product.css
@@ -14,3 +14,50 @@
     padding: 0 5vmax;
     justify-content: center;
 }
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+}
+  
+.page-item {
+    background-color: rgb(255, 255, 255);
+    list-style: none;
+    border: 1px solid rgba(0, 0, 0, 0.178);
+    padding: 1vmax 1.5vmax;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+
+.page-item:first-child {
+    border-radius: 8px 0 0 8px;
+}
+  
+.page-item:last-child {
+    border-radius: 0 8px 8px 0;
+}
+
+.page-link {
+    text-decoration: none;
+    font: 300 0.7vmax "Roboto";
+    color: rgb(80, 80, 80);
+    transition: all 0.3s;
+}
+  
+.page-item:hover {
+    background-color: rgb(236, 197, 197);
+}
+  
+.page-item:hover .page-link {
+    color: rgb(0, 0, 0);
+}
+  
+.pageItemActive {
+    background-color: tomato;
+}
+  
+.pageLinkActive {
+    color: white;
+}
+  
