--- a/frontend/src/component/Admin/OrderList.css
+++ b/frontend/src/component/Admin/OrderList.css
@@ -1,4 +1,4 @@
-.productListContainer {
+.orderListContainer {
     width: 100%;
     box-sizing: border-box;
     background-color: rgb(255, 255, 255);
@@ -8,7 +8,7 @@
     height: 100vh;
 }
   
-#productListHeading {
+#orderListHeading {
     font: 400 2rem "Roboto";
     padding: 0.5vmax;
     box-sizing: border-box;
@@ -18,27 +18,27 @@
     text-align: center;
 }
   
-.productListTable {
+.orderListTable {
     background-color: white;
     border: none !important;
 }
   
-.productListTable div {
+.orderListTable div {
     font: 300 1vmax "Roboto";
     color: rgba(0, 0, 0, 0.678);
     border: none !important;
 }
   
-.productListTable a, .productListTable button {
+.orderListTable a, .orderListTable button {
     color: rgba(0, 0, 0, 0.527);
     transition: all 0.5s;
 }
   
-.productListTable a:hover {
+.orderListTable a:hover {
     color: tomato;
 }
   
-.productListTable button:hover {
+.orderListTable button:hover {
     color: rgb(236, 30, 30);
 }
   
@@ -46,13 +46,9 @@
     color: rgb(255, 255, 255);
 }
 
-
-MuiDataGrid-cell.MuiDataGrid-cell--withRenderer.MuiDataGrid-cell--textRight > a > svg{   
-    margin-top: 15px;
-}
-
+  
 @media screen and (max-width: 600px) {
-    .productListTable div {
+    .orderListTable div {
       font: 300 4vw "Roboto";
     }
 }
